force-app/main/default/objects/Insurance_Provider_c__c/Insurance_Provider_c__c.object-meta.xml
<CustomObject>
    <label>Insurance_Provider__c</label>
    <nameField>
        <label>Insurance_Provider__Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance_Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>