force-app/main/default/objects/Insurance_Provider_c__c/fields/Co_Pay_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Co_Pay_Percentage__c</fullName>
    <label>Co-Pay Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>