force-app/main/default/objects/Insurance_Provider_c__c/fields/Payer_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Payer_Legal_Name__c</fullName>
    <externalId>true</externalId>
    <label>Payer Legal Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>