force-app/main/default/objects/Insurance_Provider_c__c/fields/Provider_API_Code__c.field-meta.xml
<CustomField>
    <fullName>Provider_API_Code__c</fullName>
    <label>Provider API Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>