force-app/main/default/objects/Insurance_Provider_c__c/validationRules/CoPayPercentage.validationRule-meta.xml
<ValidationRule>
    <fullName>CoPayPercentage</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Co_Pay_Percentage__c &lt; 0,
Co_Pay_Percentage__c &gt; 1)</errorConditionFormula>
    <errorDisplayField>Co_Pay_Percentage__c</errorDisplayField>
    <errorMessage>&quot;Co-Pay percentage
values must be between
0 and 100%.&quot;</errorMessage>
</ValidationRule>