force-app/main/default/objects/Insurance_Provider_c__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Payer_Legal_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Co_Pay_Percentage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>